# edge-ai-suites

./: .gitmodules  README.md
.github/: CODEOWNERS
metro-ai-suite/live-video-analysis/live-video-alert-agent/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  third_party_programs.txt
metro-ai-suite/live-video-analysis/live-video-alert-agent/chart/: Chart.yaml  user_values_override.yaml  values.yaml
metro-ai-suite/live-video-analysis/live-video-alert-agent/chart/templates/: serviceaccounts.yaml
metro-ai-suite/live-video-analysis/live-video-alert-agent/docs/user-guide/: api-reference.md  get-started.md  how-it-works.md  index.md  known-issues.md  release-notes.md
metro-ai-suite/live-video-analysis/live-video-alert-agent/resources/: mcp_servers.json  tools.json
metro-ai-suite/live-video-analysis/live-video-alert-agent/scripts/: init_ovms.sh
metro-ai-suite/live-video-analysis/live-video-alert-agent/src/: config.py  main.py
metro-ai-suite/live-video-analysis/live-video-alert-agent/src/agentic/: __init__.py  adk_common.py  alert_agent.py  mcp_client.py
metro-ai-suite/live-video-analysis/live-video-alert-agent/src/core/: agent_manager.py  alert_state_manager.py  event_manager.py  stream_manager.py  vlm_client.py
metro-ai-suite/live-video-analysis/live-video-alert-agent/src/schemas/: api.py  monitor.py
metro-ai-suite/live-video-analysis/live-video-alert-agent/src/ui/: index.html
metro-ai-suite/smart-route-planning-agent/src/: pyproject.toml
metro-ai-suite/vms-adapter-plugin/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  third_party_programs.txt
metro-ai-suite/vms-adapter-plugin/analytics_app_shim/lvc/: __init__.py  api_client.py  config.py  mqtt_subscriber.py  schema.py  shim.py
metro-ai-suite/vms-adapter-plugin/analytics_app_shim/object_detection/: __init__.py  api_client.py  config.py  mqtt_subscriber.py  shim.py  translator.py
metro-ai-suite/vms-adapter-plugin/config/: config.yaml
metro-ai-suite/vms-adapter-plugin/docs/user-guide/: api-reference.md  get-started.md  how-it-works.md  how-to-guides.md  index.md  release-notes.md  troubleshooting.md
metro-ai-suite/vms-adapter-plugin/docs/user-guide/_assets/: vap-sequence-diagram.drawio
metro-ai-suite/vms-adapter-plugin/docs/user-guide/get-started/: build-from-source.md  deploy-with-helm.md  system-requirements.md
metro-ai-suite/vms-adapter-plugin/docs/user-guide/how-to-guides/: dls-vision-with-nx-witness.md  (+1 more)
metro-ai-suite/vms-adapter-plugin/plugin/base/: interfaces.py
metro-ai-suite/vms-adapter-plugin/plugin/common/: schema_builder.py
metro-ai-suite/vms-adapter-plugin/plugin/core/: config.py  factory.py  main.py
metro-ai-suite/vms-adapter-plugin/tests/: conftest.py
metro-ai-suite/vms-adapter-plugin/tests/integration/: test_api.py
metro-ai-suite/vms-adapter-plugin/tests/unit/: test_analytics_apps_resolution.py  test_camera_routes.py  test_core_apps_routes.py  test_frigate_shim.py  test_models.py  test_nx_register_handler.py  test_nx_shim.py  test_object_detection_shim.py  test_object_detection_translator.py  test_orchestrator_autoregister.py  test_results_handler.py  test_vms_route.py
metro-ai-suite/vms-adapter-plugin/ui/: .dockerignore  .env.example  .gitignore  Dockerfile  README-DOCKER.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  third_party_programs.txt  vite.config.js
metro-ai-suite/vms-adapter-plugin/ui/src/: App.css  App.jsx  index.css  main.jsx
metro-ai-suite/vms-adapter-plugin/vms_shim/frigate/: shim.py
metro-ai-suite/vms-adapter-plugin/vms_shim/genetec/: __init__.py
metro-ai-suite/vms-adapter-plugin/vms_shim/milestone/: __init__.py
metro-ai-suite/vms-adapter-plugin/vms_shim/nxwitness/: models.py  nx_integration.json  repository.py  shim.py
robotics-ai-suite/components/ros-kpi/: CHEATSHEET.txt  INSTALL.md  Makefile  QUICKSTART.md  README.md  pyproject.toml  quickstart
robotics-ai-suite/components/ros-kpi/config/: fastmapping_run.yaml  picknplace_run.yaml  wandering_run.yaml
robotics-ai-suite/components/ros-kpi/docs/: COMMANDS.md
robotics-ai-suite/components/ros-kpi/schemas/: kpi_level1_v1.json  kpi_level2_v1.json
robotics-ai-suite/components/ros-kpi/src/: analyze_fastmapping_log.py  analyze_picknplace_log.py  analyze_pipeline_latency.py  analyze_trigger_latency.py  benchmark_profiler.py  benchmark_runner.sh  fastmapping_run.sh  generate_report.py  monitor_stack.py  picknplace_run.sh  ros2_graph_monitor.py  visualize_thermal.py  wandering_run.sh
robotics-ai-suite/components/ros-kpi/tests/: test_csv_export.py
(+1006 files in other folders)
