# Copyright (C) 2025 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vms-adapter-plugin"
version = "0.1.0"
description = "VMS Adapter Plugin: I/O bridge between VMS systems (Frigate, Nx Witness) and downstream Analytics Apps (Live Video Captioning)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0,<1.0",
    "uvicorn[standard]>=0.27.0,<1.0",
    "sqlalchemy[asyncio]>=2.0.25,<3.0",
    "asyncpg>=0.29.0,<1.0",
    "pydantic>=2.5.0,<3.0",
    "pydantic-settings>=2.1.0,<3.0",
    "aiomqtt>=2.3.0,<3.0",
    "httpx>=0.27.0,<1.0",
    "structlog>=24.1.0,<25.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=4.0,<6.0",
    "httpx",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["plugin*", "vms_shim*", "analytics_app_shim*"]
