# Copyright (C) 2026 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[project]
name = "smart-route-planning-agent"
version = "0.1.0"
description = "Smart Route Planner - Agentic AI based Commuter Support System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=26.3.1",
    "branca==0.6.0",
    "folium==0.14.0",
    "gpxpy",
    "gradio==6.13.0",
    "isort",
    "langgraph==1.1.9",
    "mypy",
    "numpy>1.24.3",
    "pandas",
    "pillow>=12.1.1",
    "pydantic",
    "pytest>=9.0.3",
    "python-dateutil",
    "requests>=2.33.0",
    "rich",
    "typing-extensions",
    "websockets>=16.0"
]
