# Copyright (C) 2026 Intel Corporation
# SPDX-License-Identifier: Apache-2.0
#
# These contents may have been developed with support from one or more
# Intel-operated generative artificial intelligence solutions.
[project]
name = "ros2-kpi"
version = "0.1.7"
description = "ROS2 Monitoring Stack for KPI Analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "psutil>=5.9.0",
    "prometheus-client>=0.19.0",
    "pyyaml>=6.0.3",
    "pillow>=12.1.1",
    "jsonschema>=4.0.0",
    "openpyxl>=3.1.0",
]

# System packages required (not pip-installable):
#   python3-tk   -- Tkinter, needed for interactive graph click popups (TkAgg backend)
#                   Install with: sudo apt-get install python3-tk
# Note: rclpy is required but must be installed via ROS2 system packages
# The virtual environment needs access to system site-packages for ROS2

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
include = [
    "Makefile",
    "quickstart",
    "docker-compose.yml",
    "auto-setup.sh",
    "setup_ros2_env.sh",
    "start_grafana.sh",
    "stop_grafana.sh",
    "prometheus/**",
    "grafana/**",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=26.3.1",
    "ruff>=0.1.0",
    "autopep8>=2.3.1",
]

[project.scripts]
monitor-stack = "src.monitor_stack:main"
monitor-resources = "src.monitor_resources:main"
visualize-resources = "src.visualize_resources:main"
visualize-timing = "src.visualize_timing:main"
analyze-rosbag = "src.analyze_rosbag:main"
analyze-trigger-latency = "src.analyze_trigger_latency:main"
aggregate-kpi = "src.aggregate_kpi:main"
